TODO: -check connection while the app is running -Updates from server/this .json file:https://www.codeur.ma/demo/_fh1iow/app/settings.json -save current page(mni ttkon f chi page wtkhrej trje3 tl9aha ba9ya) wa chokran

--- a/app/src/main/res/layout/activity_no_network.xml
+++ b/app/src/main/res/layout/activity_no_network.xml
@@ -7,7 +7,7 @@
     tools:context=".NoNetworkActivity">
 
     <WebView
-        android:id="@+id/activity_main_webview"
+        android:id="@+id/noConnection"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
