--- a/app/src/main/res/drawable/progress_bg.xml
+++ b/app/src/main/res/drawable/progress_bg.xml
@@ -25,7 +25,7 @@
         <gradient
             android:angle="0"
             android:endColor="#00ffffff"
-            android:startColor="@color/purple_200"
+            android:startColor="@color/color2"
             android:type="sweep"
             android:useLevel="false" />
     </shape>
